# ESP32

./: CMakeLists.txt  README.md  espidf_source.bat  sdkconfig
component/esp_idf_rc522/: CMakeLists.txt
component/esp_idf_rc522/include/: rc522_registers.h
component/esp_idf_rc522/src/: rc522.c
main/: CMakeLists.txt  main.c
main/include/: myDCMotor.h  myElectromagnet.h  myIRSensor.h  myLaser.h  myNRF24.h  myRC522.h  mySPIFFS.h  myServo.h  mySpeaker.h
main/src/: myDCMotor.c  myElectromanget.c  myIRSensor.c  myLaser.c  myNRF24.c  myRC522.c  mySPIFFS.c  myServo.c  mySpeaker.c
res/: a4.txt  b4.txt  c4.txt  c5.txt  d4.txt  e4.txt  f4.txt  g4.txt  sine.txt
res/piano_note/: a4.txt  b4.txt  c4.txt  c5.txt  d4.txt  e4.txt  f4.txt  g4.txt
